--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -135,7 +135,7 @@
                     Copyright © {{ site.time | date: "%Y" }} {{ site.name }}
                 </div>
                 <div class="col-md-6 col-sm-6 text-center text-lg-right">
-                    <a target="_blank" href="/">Tan Nguyen</a>
+                    <a target="_blank" href="/">HoangTu</a>
                 </div>
             </div>
         </div>
